# teamB-protoype

./: .gitignore  CLAUDE-1.md  CLAUDE.md  README.md  REFACTOR.md  ROADMAP.md  collections-plan.md  docker-compose.yaml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test_api.sh  turbo.json
.github/workflows/: deploy.yml
.postman/: resources.yaml
.turbo/cache/: 6ff3907f6546b684-manifest.json  6ff3907f6546b684-meta.json  6ff3907f6546b684.tar.zst
apps/backend/: Dockerfile  README  nodemon.json  package.json  test-extract.ts  tsconfig.json
apps/backend/lib/: embeddingInputs.ts  embeddings.js  embeddings.ts  extractors.ts
apps/backend/scripts/: backfill-embeddings.ts  backfill-text.ts  backfill.ts  test-embedding.ts  test-nl-query-exec.ts  test-nl-query.ts
apps/backend/src/: .test.tsx  app.ts  buckets.ts  server.ts
apps/backend/src/helpers/: auth0Management.ts  getEmployee.ts  nlQuerySchema.ts  openai.ts  permissions.ts  sqlSafety.ts  validateUrl.ts
apps/backend/src/hooks/: bookmark.ts  collection.ts  content.ts  employee.ts  login.ts  nlQuery.ts  notifications.ts  preview.ts  search.ts  servicereqs.ts  types.ts
apps/backend/src/jobs/: autoTag.ts  index.ts
apps/backend/src/lib/: supabase.ts
apps/backend/src/prisma/: schema.prisma
apps/frontend/: Dockerfile  components.json  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/frontend/src/: App.tsx  index.css  main.tsx
apps/frontend/src/lib/: mime.ts  (+9 more)
apps/python/: Dockerfile  main.py  pyproject.toml  setup_model.py
(+207 files in other folders)
