[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "sentence-transformers>=5.4.1",
    "uvicorn[standard]>=0.46.0",
    "torch>=2.11.0",
    "optimum[openvino]>=1.17.0",
    "openvino>=2024.0.0",
    "datasets>=2.18.0",
]
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }